--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
